2006-05-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/bch.cpp, itpp/comm/bch.h, tests/bch_test.cpp,
	tests/bch_test.ref:
	BCH related patches from Feature Request [1418250] applied. Now,
	BCH encoder/decoder class can be set to produce codewords in a
	systematic order. Thanks to Steve, aka "michboy", for providing
	patches and a simple test file.

2006-05-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/timer_test.cpp: Minor fix to avoid a hazard in timing test.

	* configure.ac, itpp/base/binfile.cpp, itpp/config_msvc.h:
	Removed checks for <sys/stat.h>. Now using iostream based method
	for checking if a file exists.

	* itpp/srccode/audiofile.cpp, itpp/srccode/audiofile.h,
	itpp/srccode/sources.mk:
	Added templated read_endian and write_endian functions, which
	replaced the old macro based read/write ones. Finally removed
	`machdep.h', because endianness is now handled run-time.

2006-05-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/sources.mk, itpp/srccode/audiofile.cpp,
	itpp/srccode/machdep.h, itpp/srccode/sources.mk:
	Moved `machdep.h' into `itpp/srccode', since it is only included
	in `audiofile.cpp'. Cleaned up the `machdep.h' code, by the way.

	* itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/itfile.cpp, itpp/base/itfile.h, itpp/base/itmisc.cpp,
	itpp/base/itmisc.h, itpp/itbase.h: 
	Changed the method of detecting the endianness of a system -
	`itpp/base/machdep.h' is not used any more in the base module.

	* doc/local/verification.doc: Updated to reflect recent tests
	under Windows (MinGW with IT++ External).

==============================================================================

2006-05-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.2 released (SVN tag: release-3-10-2)

	* NEWS: Updated to reflect recent changes.

	* doc/local/index.doc.in, doc/local/installation.doc, INSTALL:
	Updated according to the recent changes.

	* doc/local/authors.doc: Cosmetic changes.
