@@ -43,6 +43,7 @@ check_PROGRAMS = \
 	qr_test \
 	rand_test \
 	rec_syst_conv_code_test \
+	reedsolomon_test \
 	schur_test \
 	sigfun_test \
 	source_test \
@@ -90,6 +91,7 @@ pulse_shape_test_SOURCES = pulse_shape_test.cpp
 qr_test_SOURCES = qr_test.cpp
 rand_test_SOURCES = rand_test.cpp
 rec_syst_conv_code_test_SOURCES = rec_syst_conv_code_test.cpp
+reedsolomon_test_SOURCES = reedsolomon_test.cpp
 schur_test_SOURCES = schur_test.cpp
 sigfun_test_SOURCES = sigfun_test.cpp
 source_test_SOURCES = source_test.cpp
