@@ -1,0 +1,87 @@
+==========================================
+   Test of Reed-Solomon encoder/decoder   
+==========================================
+Non-systematic case
+-------------------
+Info word:       [0 1 0 0 0 0 0 0 0 0 1 1 0 1 1]
+Encoded:         [1 1 0 1 1 1 0 1 0 1 0 1 1 0 0 0 1 0 0 1 1]
+One error added: [0 1 0 1 1 1 0 1 0 1 0 1 1 0 0 0 1 0 0 1 1]
+Decoded to:      [0 1 0 0 0 0 0 0 0 0 1 1 0 1 1]
+
+Info word:       [1 0 1 0 0 0 0 0 0 0 1 1 1 0 0]
+Encoded:         [1 0 0 0 1 1 1 0 1 1 0 1 1 1 0 1 1 0 1 0 0]
+One error added: [1 1 0 0 1 1 1 0 1 1 0 1 1 1 0 1 1 0 1 0 0]
+Decoded to:      [1 0 1 0 0 0 0 0 0 0 1 1 1 0 0]
+
+Info word:       [0 1 0 1 1 0 0 0 1 0 1 1 0 1 0]
+Encoded:         [1 1 0 1 1 0 0 1 1 1 0 1 1 1 0 1 0 0 0 1 0]
+One error added: [1 1 0 1 1 0 0 1 0 1 0 1 1 1 0 1 0 0 0 1 0]
+Decoded to:      [0 1 0 1 1 0 0 0 1 0 1 1 0 1 0]
+
+Info word:       [0 0 0 0 1 1 1 1 1 0 1 1 1 0 0]
+Encoded:         [0 0 0 1 0 1 0 1 1 0 1 0 0 0 1 1 1 0 1 0 0]
+One error added: [0 0 0 0 0 1 0 1 1 0 1 0 0 0 1 1 1 0 1 0 0]
+Decoded to:      [0 0 0 0 1 1 1 1 1 0 1 1 1 0 0]
+
+Info word:       [0 1 0 0 1 0 0 1 1 0 0 1 0 0 1]
+Encoded:         [1 1 0 0 0 1 0 0 0 0 0 0 1 1 0 1 1 1 0 0 1]
+One error added: [1 1 0 0 1 1 0 0 0 0 0 0 1 1 0 1 1 1 0 0 1]
+Decoded to:      [0 1 0 0 1 0 0 1 1 0 0 1 0 0 1]
+
+Info word:       [0 0 1 0 0 0 0 0 1 1 1 1 1 1 0]
+Encoded:         [0 1 1 1 1 0 0 1 0 1 0 0 1 0 0 1 0 1 1 1 0]
+One error added: [0 1 1 1 1 0 0 1 0 1 0 1 1 0 0 1 0 1 1 1 0]
+Decoded to:      [0 0 1 0 0 0 0 0 1 1 1 1 1 1 0]
+
+Info word:       [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0]
+Encoded:         [1 0 0 1 1 1 1 0 0 1 1 0 0 1 1 1 1 0 1 1 0]
+One error added: [1 0 0 1 1 1 1 0 0 1 1 0 0 1 1 1 1 0 1 1 1]
+Decoded to:      [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0]
+
+Info word:       [0 0 1 0 1 1 1 1 0 0 0 0 0 0 1]
+Encoded:         [0 1 1 0 1 1 0 0 1 0 0 1 1 0 1 1 1 0 0 0 1]
+One error added: [0 1 1 0 1 1 0 0 1 1 0 1 1 0 1 1 1 0 0 0 1]
+Decoded to:      [0 0 1 0 1 1 1 1 0 0 0 0 0 0 1]
+
+Systematic case
+---------------
+Info word:       [0 1 0 0 0 0 0 0 0 0 1 1 0 1 1]
+Encoded:         [0 1 0 0 0 0 0 0 0 0 1 1 0 1 1 1 1 0 1 0 0]
+One error added: [1 1 0 0 0 0 0 0 0 0 1 1 0 1 1 1 1 0 1 0 0]
+Decoded to:      [0 1 0 0 0 0 0 0 0 0 1 1 0 1 1]
+
+Info word:       [1 0 1 0 0 0 0 0 0 0 1 1 1 0 0]
+Encoded:         [1 0 1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 0 0]
+One error added: [1 1 1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 0 0]
+Decoded to:      [1 0 1 0 0 0 0 0 0 0 1 1 1 0 0]
+
+Info word:       [0 1 0 1 1 0 0 0 1 0 1 1 0 1 0]
+Encoded:         [0 1 0 1 1 0 0 0 1 0 1 1 0 1 0 0 0 1 0 1 1]
+One error added: [0 1 0 1 1 0 0 0 0 0 1 1 0 1 0 0 0 1 0 1 1]
+Decoded to:      [0 1 0 1 1 0 0 0 1 0 1 1 0 1 0]
+
+Info word:       [0 0 0 0 1 1 1 1 1 0 1 1 1 0 0]
+Encoded:         [0 0 0 0 1 1 1 1 1 0 1 1 1 0 0 1 0 0 1 1 1]
+One error added: [0 0 0 1 1 1 1 1 1 0 1 1 1 0 0 1 0 0 1 1 1]
+Decoded to:      [0 0 0 0 1 1 1 1 1 0 1 1 1 0 0]
+
+Info word:       [0 1 0 0 1 0 0 1 1 0 0 1 0 0 1]
+Encoded:         [0 1 0 0 1 0 0 1 1 0 0 1 0 0 1 0 0 1 1 1 0]
+One error added: [0 1 0 0 0 0 0 1 1 0 0 1 0 0 1 0 0 1 1 1 0]
+Decoded to:      [0 1 0 0 1 0 0 1 1 0 0 1 0 0 1]
+
+Info word:       [0 0 1 0 0 0 0 0 1 1 1 1 1 1 0]
+Encoded:         [0 0 1 0 0 0 0 0 1 1 1 1 1 1 0 0 1 0 0 0 0]
+One error added: [0 0 1 0 0 0 0 0 1 1 1 0 1 1 0 0 1 0 0 0 0]
+Decoded to:      [0 0 1 0 0 0 0 0 1 1 1 1 1 1 0]
+
+Info word:       [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0]
+Encoded:         [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0 1 1 1 1 1 0]
+One error added: [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0 1 1 1 1 1 1]
+Decoded to:      [1 0 1 1 0 1 1 1 1 1 0 0 1 1 0]
+
+Info word:       [0 0 1 0 1 1 1 1 0 0 0 0 0 0 1]
+Encoded:         [0 0 1 0 1 1 1 1 0 0 0 0 0 0 1 0 1 1 1 1 1]
+One error added: [0 0 1 0 1 1 1 1 0 1 0 0 0 0 1 0 1 1 1 1 1]
+Decoded to:      [0 0 1 0 1 1 1 1 0 0 0 0 0 0 1]
+
